lots of necessary changes, I think I fixed the timer issue on the backend and frontend (getting stuck at 0).

--- a/guess_who/css/guesswho.css
+++ b/guess_who/css/guesswho.css
@@ -273,13 +273,8 @@ button:hover
 }
 
 .demo_window {
-    width: 550px;
-    height: 350px;
+    width: 700px;
+    height: 500px;
     float: left;
     margin: 10px;
-}
-
-.trendinglist {
-  list-style-type: none;
-  margin: 20px;
 }
